--- a/deepgmap/network_constructors/.gitignore
+++ b/deepgmap/network_constructors/.gitignore
@@ -21,3 +21,7 @@
 /network_constructor_deepsea_1d5.pyc
 /network_constructor_deepsea_1d6.pyc
 /template_model.pyc
+/conv4frss2.pyc
+/conv4frss3.pyc
+/conv4frssplus3.pyc
+/conv4frssplus4.pyc
